Closed Bug 1332997 Opened 8 years ago Closed 8 years ago

Deprecation warning from mimeJSComponents.js:443 still present after bug 1324443

Categories

(MailNews Core :: MIME, defect)

defect
Not set
normal

Tracking

(thunderbird52 fixed, thunderbird53 fixed, thunderbird54 fixed)

RESOLVED FIXED
Thunderbird 54.0
Tracking Status
thunderbird52 --- fixed
thunderbird53 --- fixed
thunderbird54 --- fixed

People

(Reporter: jorgk-bmo, Assigned: jorgk-bmo)

Details

Attachments

(1 file)

+++ This bug was initially created as a clone of Bug #1324443 +++ https://hg.mozilla.org/comm-central/rev/9c1291d2e1f7521c2558e8c76f37a6b724c9be32#l1.12 When I send an e-mail with me as the sender and charset wind-1252, the From gets encoded as: From: =?UTF-8?Q?J=c3=b6rg_Knobloch?= <jorgk@jorgk.com> Yet I get a complaint on the intent to encode the From header with the charset of the message. Since encodeMimePartIIStr_UTF8 just ignores the charset passed in, it makes no sense to call it with a charset it will just ignore: https://dxr.mozilla.org/comm-central/rev/9cb95ca4c3f7cbd473e78addb8e3607af6af8386/mailnews/mime/src/mimeJSComponents.js#442 This message is unnecessary and will scare people. Besides, according to RFC 6532 headers can have raw UTF-8 but nothing else (https://tools.ietf.org/html/rfc6532#section-3.2). Patch coming.
Assignee: nobody → jorgk
Status: NEW → ASSIGNED
Attachment #8829336 - Flags: review?(acelists)
Attachment #8829336 - Flags: review?(acelists) → review+
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 54.0
Comment on attachment 8829336 [details] [diff] [review] 1332997-deprecation-warning.patch This ugly warning should also go from the other branches.
Attachment #8829336 - Flags: approval-comm-beta+
Attachment #8829336 - Flags: approval-comm-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: