Bug 1332997 - Stop deprecation warning from mimeJSComponents.js:443. r=aceman